Replace plugin codebase with working version from dx-data-sharer