@@ -1,10 +1,16 @@
 package io.jenkins.plugins.sample;
 
 import hudson.Extension;
+import hudson.util.FormValidation;
+import java.util.regex.Pattern;
+import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
 import jenkins.model.GlobalConfiguration;
+import net.sf.json.JSONObject;
 import org.kohsuke.stapler.DataBoundSetter;
+import org.kohsuke.stapler.QueryParameter;
+import org.kohsuke.stapler.StaplerRequest;
 
-/** Global configuration for the DX data sharing plugin. */
 @Extension
 public class DxGlobalConfiguration extends GlobalConfiguration {
 
@@ -21,66 +27,116 @@ public class DxGlobalConfiguration extends GlobalConfiguration {
         return GlobalConfiguration.all().get(DxGlobalConfiguration.class);
     }
 
-    @Override
-    public String getDisplayName() {
-        return "DX Data Sharing Configuration";
-    }
-
+    @Nullable
     public String getDxBaseUrl() {
         return dxBaseUrl;
     }
 
     @DataBoundSetter
-    public void setDxBaseUrl(String dxBaseUrl) {
+    public void setDxBaseUrl(@Nullable String dxBaseUrl) {
         this.dxBaseUrl = dxBaseUrl;
         save();
     }
 
+    @Nullable
     public String getIncludeRepoPattern() {
         return includeRepoPattern;
     }
 
     @DataBoundSetter
-    public void setIncludeRepoPattern(String includeRepoPattern) {
+    public void setIncludeRepoPattern(@Nullable String includeRepoPattern) {
         this.includeRepoPattern = includeRepoPattern;
         save();
     }
 
+    @Nullable
     public String getIncludeJobPattern() {
         return includeJobPattern;
     }
 
     @DataBoundSetter
-    public void setIncludeJobPattern(String includeJobPattern) {
+    public void setIncludeJobPattern(@Nullable String includeJobPattern) {
         this.includeJobPattern = includeJobPattern;
         save();
     }
 
+    @Nullable
     public String getIncludeBranchPattern() {
         return includeBranchPattern;
     }
 
     @DataBoundSetter
-    public void setIncludeBranchPattern(String includeBranchPattern) {
+    public void setIncludeBranchPattern(@Nullable String includeBranchPattern) {
         this.includeBranchPattern = includeBranchPattern;
         save();
     }
 
     public boolean isConfigured() {
-        return dxBaseUrl != null && !dxBaseUrl.isBlank();
+        return dxBaseUrl != null && !dxBaseUrl.trim().isEmpty();
     }
 
-    public boolean shouldProcess(String repo, String job, String branch) {
-        return matchesOrBlank(includeRepoPattern, repo)
-                && matchesOrBlank(includeJobPattern, job)
-                && matchesOrBlank(includeBranchPattern, branch);
+    public boolean shouldProcess(@Nullable String repo, @Nullable String jobName, @Nullable String branch) {
+        if (!isConfigured()) {
+            return false;
+        }
+        return matches(includeRepoPattern, repo)
+                && matches(includeJobPattern, jobName)
+                && matches(includeBranchPattern, branch);
     }
 
-    private boolean matchesOrBlank(String pattern, String value) {
-        return pattern == null || pattern.isEmpty() || matches(pattern, value);
+    private boolean matches(@Nullable String pattern, @Nullable String value) {
+        if (pattern == null || pattern.isEmpty()) {
+            return true;
+        }
+        if (value == null) {
+            return false;
+        }
+        try {
+            final Pattern compiled = Pattern.compile(pattern);
+            return compiled.matcher(value).find();
+        } catch (Exception e) {
+            return true; // fail open if regex is invalid
+        }
     }
 
-    private boolean matches(String pattern, String value) {
-        return pattern != null && !pattern.isEmpty() && value != null && value.matches(pattern);
+    @Override
+    public boolean configure(@Nonnull StaplerRequest req, @Nonnull JSONObject json) throws FormException {
+        req.bindJSON(this, json);
+        save();
+        return true;
+    }
+
+    public FormValidation doCheckDxBaseUrl(@QueryParameter String value) {
+        if (value == null || value.trim().isEmpty()) {
+            return FormValidation.warning("DX API base URL is empty.");
+        }
+        if (!value.startsWith("https://")) {
+            return FormValidation.warning("DX base URL should start with https://");
+        }
+        return FormValidation.ok();
+    }
+
+    public FormValidation doCheckIncludeRepoPattern(@QueryParameter String value) {
+        return validateRegex(value, "Repository pattern");
+    }
+
+    public FormValidation doCheckIncludeJobPattern(@QueryParameter String value) {
+        return validateRegex(value, "Job name pattern");
+    }
+
+    public FormValidation doCheckIncludeBranchPattern(@QueryParameter String value) {
+        return validateRegex(value, "Branch pattern");
+    }
+
+    private FormValidation validateRegex(@Nullable String value, String fieldName) {
+        if (value == null || value.isEmpty()) {
+            return FormValidation.ok();
+        }
+        try {
+            Pattern.compile(value);
+            return FormValidation.ok();
+        } catch (Exception e) {
+            return FormValidation.error(fieldName + " has an invalid regex pattern.");
+        }
     }
 }
